tests/ucc/type/bad/bad-struct-member.c
struct a
{
    int b;
};

int main(void)
{
    struct a *a;

    a->c = 0;

    return 0;
}
